상태 패턴 아직 미완성(동작 상태 위임 부분 미완)

--- a/StatePattern/StatePattern.vcxproj
+++ b/StatePattern/StatePattern.vcxproj
@@ -146,6 +146,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="DivingState.h" />
+    <ClInclude Include="DuckingState.h" />
+    <ClInclude Include="Heroine.h" />
+    <ClInclude Include="HeroineState.h" />
+    <ClInclude Include="JumpingState.h" />
+    <ClInclude Include="StandingState.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="DivingState.cpp" />
+    <ClCompile Include="DuckingState.cpp" />
+    <ClCompile Include="Heroine.cpp" />
+    <ClCompile Include="HeroineState.cpp" />
+    <ClCompile Include="JumpingState.cpp" />
+    <ClCompile Include="mainProc.cpp" />
+    <ClCompile Include="StandingState.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
