--- a/StatePattern/StatePattern.vcxproj.filters
+++ b/StatePattern/StatePattern.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClInclude Include="test2.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Middle.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="UnderGround.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HeroineState.cpp">
@@ -78,6 +84,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="test2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Middle.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="UnderGround.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
