Revert "test클래스 삭제, 로그삭제"
This reverts commit 57d3694b4fda1a9f0f16cf180ddc85e87655c1fd.

--- a/StatePattern/StatePattern.vcxproj.filters
+++ b/StatePattern/StatePattern.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClInclude Include="OnSkyState.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="test.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="test2.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
     <ClInclude Include="Middle.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
@@ -72,6 +78,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="OnSkyState.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="test.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="test2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Middle.cpp">
