--- a/StatePattern/StatePattern.vcxproj
+++ b/StatePattern/StatePattern.vcxproj
@@ -155,6 +155,8 @@
     <ClInclude Include="OnGroundState.h" />
     <ClInclude Include="OnSkyState.h" />
     <ClInclude Include="StandingState.h" />
+    <ClInclude Include="test.h" />
+    <ClInclude Include="test2.h" />
     <ClInclude Include="UnderGround.h" />
   </ItemGroup>
   <ItemGroup>
@@ -168,6 +170,8 @@
     <ClCompile Include="OnGroundState.cpp" />
     <ClCompile Include="OnSkyState.cpp" />
     <ClCompile Include="StandingState.cpp" />
+    <ClCompile Include="test.cpp" />
+    <ClCompile Include="test2.cpp" />
     <ClCompile Include="UnderGround.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
