--- a/StatePattern/StatePattern.vcxproj.filters
+++ b/StatePattern/StatePattern.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="UnderGround.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="StateStack.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HeroineState.cpp">
@@ -78,6 +81,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="UnderGround.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="StateStack.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
